added reqModel for signup
